--- a/css/styles.css
+++ b/css/styles.css
@@ -13,30 +13,36 @@ body{
 
 section header{
     display: flex;
+    background-color: white;
+    justify-content: space-around;
     width: 100%;
-    height: 100px;
-    justify-content: space-evenly;
+    min-height: 100px;
+    align-items: center;
 }
 body section header .logo{
+display: flex;
 width: 30%;
-margin: 8px;
-padding: 7px;
+height: 60px;
+justify-content: space-around;
 }
-body section header nav{
+ header nav {
 width: 70%;
-display: inline;
+height: 60px;
+}
+section header nav ul{
+    display: flex;
+    width: 100%;
+    height:60px;
+    justify-content: space-around;
 }
 body section header nav li{
-    display: inline-block;
-    justify-content: space-around;
-    margin:10px 0px 10px;
-    padding: 8px;
-    
+    list-style-type: none;
 }
+
 body section header nav li a{
     text-decoration: none;
 }
-.HOME{
+ body section .HOME{
     content: url(../images/jumbo.jpg);
     width: 100%;
     display: flex;
